[package]
name = "local-thickness-rs"
version = "0.1.0"
authors = ["Nathan J. Neeteson <njneeteson@gmail.com>"]
edition = "2021"

[lib]
name = "local_thickness_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py37"] }
numpy = "0.19"
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }